# fermatrica_utils

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/api/: fermatrica_utils.html  index.html  search.js
docs/api/fermatrica_utils/: arrays.html  decorators.html  flow.html  math.html  objects.html  os.html  primitives.html  visual.html
docs/api/fermatrica_utils/arrays/: arrays.html  data.html  merge.html  ts.html
docs/api/fermatrica_utils/primitives/: date.html  num.html  string.html
docs/guides/: create_docs.MD
fermatrica_utils/: __init__.py  decorators.py  flow.py  math.py  objects.py  os.py  visual.py
fermatrica_utils/arrays/: __init__.py  arrays.py  data.py  merge.py  ts.py
fermatrica_utils/primitives/: __init__.py  date.py  num.py  string.py
tests/basics/: basics.py
tests/test_arrays/: conftest.py  test_arrays.py  test_data.py  test_merge.py  test_ts.py
tests/test_arrays/test_cases/arrays/: dict_multifill.yaml  dict_to_df.yaml  like_sr.yaml  list_select.yaml  list_unique.yaml  rm_1_item_groups.yaml  select_eff.yaml  step_generator.yaml  str_replace_eff.yaml
tests/test_arrays/test_cases/data/: columns_normalize_df.yaml  decapitalise_df.yaml  extra_spaces_df.yaml  header_row_detect.yaml  pandas_force_materialize.yaml  pandas_force_materialize_series.yaml  split_dataframe.yaml
tests/test_arrays/test_cases/ts/: ma_eff.yaml  mal_eff.yaml  mar_eff.yaml  (+6 more)
tests/test_core/: test_flow.py  test_math.py  test_objects.py  test_os.py  test_visual.py
tests/test_primitives/: test_date.py  test_num.py  test_string.py
(+12 files in other folders)
